Попытка разделить html

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,6 @@
   </head>
   <body> 
     <div>hello, world!</div>
-    <header__main>main</header__main>
+      @@include('templates/header.html') 
   </body>
 </html>
